2016-11-23  Eric Herman <eric@freesa.org>

	subtraction now works with negative numbers

	* src/ehbigint.c: re-work ehbi_subtract to work with negatives
	* tests/test-subtract.c: add more tests

2016-11-21  Eric Herman <eric@freesa.org>

	find the bug with decrement (failing to early return)

	* src/ehbigint.c: return correctly; remove debug prints, fix sign bug
	* tests/test-dec.c: add more tests
	* tests/test-div.c: adjust test order
	* tests/test-inc-l.c: add two more tests
	* tests/test-set-l.c: add a test

2016-11-20  Eric Herman <eric@freesa.org>

	introduce a sign field

	* src/ehbigint.h: introduce the new field
	* README: note the new field
	* src/ehbigint.c: rework logic to use sign bit
	* src/ehbigint-str.c: zero-out fields only to 0x00, not 0xFF
	* tests: initialize the sign bit to zero

2016-11-17  Eric Herman <eric@freesa.org>

	ehbi_set_decimal_string allow negative numbers
	ehbi_to_decimal_string respect negative numbers

	* src/ehbigint.h: add "ehbi_negate" function
	* src/ehbigint.c: add "ehbi_negate" function
	* src/ehbigint-str.c: deal with negative numbers better
	* tests/test-from-decimal-to-decimal-round-trip.c: "-1"


2016-11-15  Eric Herman <eric@freesa.org>

	finally find and fix corner-case in from_decimal going negative
	introduce DIVIDE_BY_ZERO error code

	* src/ehbigint-str.c: leave leading 00 if first hex byte > 0x7F
	* tests/test-div.c: add test with case which revealed bug
	* tests/test-from-decimal-to-decimal-round-trip.c: check >= 0

2016-11-13  Eric Herman <eric@freesa.org>

	implement "long mulitiplication" rather than loop-increment
	fix corner-case in ehbi_div
	reorganize the string parsing, improve naming
	make Ehbi_log_error macro names less "shouty"
	make Test_log_error macro names less "shouty"
	remove dependencies on libehstr, echeck
	add ifdef __cplusplus extern "C" to headers

	* src/ehbigint.c: rewrite ehbi_mul, reference ehbigint-str.h
	* src/ehbigint-str.h: "semi-public" functions, not in ehbigint.h